test08_autoscale/network.tf
# terraform_example/test08_autoscale/network.tf

# vpc, internet gateway, subnet, routing table 등의


# VPC 생성
resource "aws_vpc" "main" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
  tags                 = { Name = "lecture-vpc" }
}


# 인터넷 게이트웨이
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
  tags   = { Name = "lecture-igw" }
}


# 퍼블릭 서브넷1
resource "aws_subnet" "public_subnet_1" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.1.0/24"
  # 가용 영역1 (변수에 저장된 내용 이용해서 설정)
  availability_zone       = var.avail_zone_1
  # public subnet 이기 때문에 public ipv4 주소 할당
  map_public_ip_on_launch = true
  tags                    = { Name = "lecture-subnet-1" }
}


# 퍼블릭 서브넷2 (변수에 저장된 내용 이용해서 설정)
resource "aws_subnet" "public_subnet_2" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.2.0/24"
  # 가용 영역2
  availability_zone       = var.avail_zone_2
  # public subnet 이기 때문에 public ipv4 주소 할당
  map_public_ip_on_launch = true
  tags                    = { Name = "lecture-subnet-2" }
}


# 라우팅 테이블
resource "aws_route_table" "public_rt" {
  # 위에서 만든 vpc 에 위치 시키기
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    # 위에서 만든 internet gateway 연결 (public subnet 에서 사용할 라우팅 테이블)
    gateway_id = aws_internet_gateway.igw.id
  }
}


# 라우팅 테이블을 public_subnet_1 에 연결하기
resource "aws_route_table_association" "public_assoc_1" {
    subnet_id = aws_subnet.public_subnet_1.id
    route_table_id = aws_route_table.public_rt.id
}


# 라우팅 테이블을 public_subnet_2 에 연결하기
resource "aws_route_table_association" "public_assoc_2" {
    subnet_id = aws_subnet.public_subnet_2.id
    route_table_id = aws_route_table.public_rt.id
}
